# math3dcpp

./: CMakeLists.txt
Docs/: Doxygen.config
Src/: Configuration.hpp  Coordinates.cpp  Coordinates.hpp  Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  RigidBody.cpp  RigidBody.hpp  Vector.cpp  Vector.hpp  Vector3.cpp  Vector3.hpp  VectorImpl.cpp  VectorImpl.hpp
Uts/: CoordinatesTest.cpp  MatrixTest.cpp  QuaternionTest.cpp  RigidBodyTest.cpp  Vector3Test.cpp  VectorTest.cpp
